<resources>
    <string name="app_name">Attendo</string>
    <string name="attendance">Attendance: %1$.2f%%</string>
    <string name="classes_info_default">Classes info will appear here.</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="enter_subject_name">Enter subject name</string>
    <string name="add_subject">Add Subject</string>
    <string name="no_classes_marked">No classes marked yet.</string>
    <string name="can_miss_classes">You can miss %1$d more class(es) and still meet minimum attendance.</string>
    <string name="need_attend_classes">You need to attend next %1$d class(es) to reach minimum attendance.</string>
    <string name="select_subject">Select Subject</string>
    <string name="mark_present">Mark Present</string>
    <string name="mark_absent">Mark Absent</string>
    <string name="attendance_stats">Attended: %1$d | Missed: %2$d | Total: %3$d</string>
    <string name="delete_subject">Delete Subject</string>
    <string name="confirm_delete">Are you sure you want to delete "%1$s"?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="subject_deleted">Subject deleted</string>
    <string name="view_history">View History</string>
    <string name="export_data">Export Data</string>
    <string name="attendance_history">Attendance History</string>
    <string name="no_records_found">No attendance records found.</string>
    <string name="extra_class">Extra Class</string>
    <string name="subject_list">List of subjects</string>
    <string name="add_notes">Add Notes</string>
    <string name="edit_subject">Edit Subject</string>
    <string name="view_notes">View Notes</string>
    <string name="hello_greeting">Hello,</string>
    <string name="student_name">Student</string>
    <string name="profile_icon">Profile</string>
</resources>